Fixed form field overflow issue. (#628)

--- a/src/themes/website/styles/forms.scss
+++ b/src/themes/website/styles/forms.scss
@@ -202,12 +202,12 @@ $search-button-width: 30px;
     tag-input {
         display: block;
         margin: 5px 0;
-        min-width: 300px;
+        width: 300px;
     }
 
     .input-group:first-child {
         border-bottom: 1px solid #a19f9d;
-        min-width: 300px;
+        width: 300px;
         flex: 1;
     }
 
